css/site.css
.header {
    background-color:#4183c4;
    height:240px;
    margin-top:-20px;
}

.container-fixed {
    margin: 0 auto;
    width:95%;
    max-width: 960px;
    padding-left:10px;
    padding-right:10px;
}

h1 {
    font-size:48px;
    color:#fff;
    padding-top:30px;
}

.subtitle {
    font-size:16px;
    color:#fff;
    font-style: italic;
    line-height: 125%;
}

.tile {
    height:250px;
    border-style:solid;
    border-width:1px;
    border-color:#ddd;
    padding:15px;
    text-align: center;
}

.col-sm-4 {
    margin-top:20px;
}

h4{
    margin-top:0px;
    font-weight:bold;
}

.timetitle {
    margin-top:20px;
    font-size:36px;
    color:#4183c4;
    border-bottom-style:solid;
    border-bottom-color:#4183c4;
    border-width:2px;
    font-style: italic;     
}

a {
   color:#4183c4; 
}

.menuitem a{
    font-size:18px;
    font-weight: bold;
    padding-right:20px;
    color:#9cc6e0;
}

#about {
    padding-top:20px;
    max-width:500px;
    text-align: justify;
    text-justify: inter-word;    
}

.standard{
    font-size:18px;
    font-family:italic;
    line-height: 125%;
}

